--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1"
   },
   "name": "womenup_test_task",
