--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "name": "womenup_test_task",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development nodemon src/index.ts",
+    "prod": "NODE_ENV=production ts-node --esm src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
