--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "target": "es2016",
-    "module": "commonjs",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "baseUrl": "src",
+    "moduleResolution": "node",
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": ["src/**/*"]
