--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "dev": "NODE_ENV=development nodemon src/index.ts",
-    "prod": "NODE_ENV=production ts-node --esm src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "prod": "ts-node --esm src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
