--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "skipLibCheck": true,
     "baseUrl": "src",
     "moduleResolution": "node",
-    "typeRoots": ["./src/types", "./node_modules/@types"]
+    "typeRoots": [
+        "./src/types", "./node_modules/@types"]
   },
-  "include": ["src/**/*"]
+  "include": [
+      "src/**/*"
+  ]
 }
