--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "prod": "ts-node --esm src/index.ts",
+    "start": "ts-node --esm src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
