--- a/package.json
+++ b/package.json
@@ -34,8 +34,13 @@
   },
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "start": "ts-node --esm src/index.ts",
+    "start": "node dist/index.js",
+    "postinstall": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "19.1.0",
+    "npm": "8.19.3"
   },
   "author": "",
   "license": "ISC",
