--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
 {
+  "name": "womenup_test_task",
+  "version": "1.0.0",
+  "main": "index.ts",
+  "scripts": {
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "postinstall": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "19.1.0",
+    "npm": "8.19.3"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "@types/cors": "^2.8.12",
     "bcrypt": "^5.1.0",
@@ -15,9 +31,6 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1"
   },
-  "name": "womenup_test_task",
-  "version": "1.0.0",
-  "main": "index.ts",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
@@ -31,18 +44,5 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3"
-  },
-  "scripts": {
-    "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js",
-    "postinstall": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "engines": {
-    "node": "19.1.0",
-    "npm": "8.19.3"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
