--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "node dist/index.js",
     "postinstall": "tsc",
     "docs": "jsdoc -c jsdoc.json",
-    "deploy-docs": "jsdoc -c jsdoc.json && gh-pages -d docs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy-docs": "jsdoc -c jsdoc.json && gh-pages -d docs"
   },
   "engines": {
     "node": "19.1.0",
