--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "gh-pages": "^4.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "better-docs": "^2.7.2",
-    "eslint": "^8.28.0",
+    "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
+    "gh-pages": "^4.0.0",
     "jsdoc": "^3.6.11",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
